more color changes

--- a/data/projects/2014-07-07-project-3.yaml
+++ b/data/projects/2014-07-07-project-3.yaml
@@ -1,5 +1,5 @@
 modalID: 3
-title: Hypotheker
+title: De Hypotheker
 subtitle: Lorem ipsum dolor sit amet consectetur.
 date: 2014-07-07
 img: hypotheker.png
